fix(garage): Switch map to light theme with satellite view toggle
- Enable map type control (roadmap/satellite/hybrid options)
- Switch card styling to light theme for better readability
- Keep premium gold/maroon accent colors

--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -14,14 +14,14 @@
     <link rel="stylesheet" href="css/garage-dashboard.css?v=2.4">
     <!-- Google Maps Location Picker - Upgraded from Leaflet Jan 27, 2026 -->
     <style>
-        /* Modern Map Card System - Chic Driver-Style Design */
+        /* Modern Map Card System - Light Theme with Premium Accents */
         .gmap-card {
             position: relative;
             border-radius: 16px;
             overflow: hidden;
-            background: linear-gradient(135deg, #1a1a2e 0%, #0f0f1a 100%);
-            border: 1px solid rgba(168, 32, 80, 0.3);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(212, 175, 55, 0.1);
+            background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);
+            border: 1px solid rgba(168, 32, 80, 0.2);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(212, 175, 55, 0.1);
         }
 
         .gmap-card::before {
@@ -40,8 +40,8 @@
             align-items: center;
             justify-content: space-between;
             padding: 16px 20px;
-            background: rgba(255, 255, 255, 0.03);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+            background: rgba(168, 32, 80, 0.03);
+            border-bottom: 1px solid rgba(168, 32, 80, 0.1);
         }
 
         .gmap-header-left {
