Deep Audit: Fix socket reconnection, returns endpoint, API URLs, and payment notifications
- Operations Dashboard: Add order_cancelled and new_return_request socket listeners
- 4 Dashboards: Add connect/disconnect handlers for data refresh on reconnect
- Operations Routes: Implement /returns endpoint with actual ReturnService
- Mobile API: Fix /cancellation -> /cancellations URL mismatch (critical)
- Mobile Socket: Add request_expired and counter_offer_expired listeners
- Garage Dashboard: Add payments_sent socket listener for payout notifications
- Update VPS sync script with correct IP address
- Create comprehensive audit report

--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -114,6 +114,11 @@
                         <i class="bi bi-file-earmark-bar-graph"></i>
                         Reports
                     </a>
+                    <a class="nav-item" data-section="fraud">
+                        <i class="bi bi-shield-exclamation"></i>
+                        Fraud Review
+                        <span class="nav-badge" id="fraudBadge" style="display: none; background: #ef4444;">0</span>
+                    </a>
                 </div>
 
                 <div class="nav-section">
@@ -849,6 +854,161 @@
                             <p>Then click "Generate Report" to preview</p>
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <!-- Fraud Review Section (NEW) -->
+            <section class="section" id="sectionFraud">
+                <div class="page-header">
+                    <h1 class="page-title"><i class="bi bi-shield-exclamation" style="color: #ef4444;"></i> Fraud
+                        Prevention Center</h1>
+                    <p style="color: var(--text-secondary);">Monitor abuse patterns, review return requests, and manage
+                        garage penalties</p>
+                </div>
+
+                <!-- Fraud Stats -->
+                <div class="stats-grid" style="margin-bottom: 24px;">
+                    <div class="stat-card">
+                        <div class="stat-icon" style="background: rgba(239, 68, 68, 0.1); color: #ef4444;">
+                            <i class="bi bi-person-exclamation"></i>
+                        </div>
+                        <div class="stat-info">
+                            <div class="stat-value" id="fraudWatchlistCount">0</div>
+                            <div class="stat-label">Customers on Watchlist</div>
+                        </div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-icon" style="background: rgba(245, 158, 11, 0.1); color: #f59e0b;">
+                            <i class="bi bi-arrow-return-left"></i>
+                        </div>
+                        <div class="stat-info">
+                            <div class="stat-value" id="fraudPendingReturns">0</div>
+                            <div class="stat-label">Pending Return Reviews</div>
+                        </div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-icon" style="background: rgba(139, 92, 246, 0.1); color: #8b5cf6;">
+                            <i class="bi bi-cash-stack"></i>
+                        </div>
+                        <div class="stat-info">
+                            <div class="stat-value" id="fraudPenaltiesMonth">0 QAR</div>
+                            <div class="stat-label">Garage Penalties This Month</div>
+                        </div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-icon" style="background: rgba(16, 185, 129, 0.1); color: #10b981;">
+                            <i class="bi bi-check-circle"></i>
+                        </div>
+                        <div class="stat-info">
+                            <div class="stat-value" id="fraudPreventedAmount">0 QAR</div>
+                            <div class="stat-label">Abuse Prevented (Est.)</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Return Requests Review Queue -->
+                <div class="content-card" style="margin-bottom: 20px;">
+                    <div class="content-header">
+                        <h3 class="content-title"><i class="bi bi-arrow-return-left" style="color: #f59e0b;"></i> Return
+                            Request Review Queue</h3>
+                        <button class="btn btn-ghost btn-sm" onclick="loadReturnRequests()">
+                            <i class="bi bi-arrow-clockwise"></i> Refresh
+                        </button>
+                    </div>
+                    <table class="data-table">
+                        <thead>
+                            <tr>
+                                <th>Customer</th>
+                                <th>Order</th>
+                                <th>Part</th>
+                                <th>Reason</th>
+                                <th>Photos</th>
+                                <th>Submitted</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="returnRequestsTable">
+                            <tr>
+                                <td colspan="7" class="empty-state">
+                                    <i class="bi bi-check-circle" style="font-size: 24px; color: var(--success);"></i>
+                                    <p>No pending return requests</p>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Customer Abuse Tracking -->
+                <div class="content-card" style="margin-bottom: 20px;">
+                    <div class="content-header">
+                        <h3 class="content-title"><i class="bi bi-person-exclamation" style="color: #ef4444;"></i>
+                            Customer Abuse Monitoring</h3>
+                        <div style="display: flex; gap: 8px;">
+                            <select id="fraudFlagFilter" class="form-control" style="width: auto;"
+                                onchange="loadAbuseTracking()">
+                                <option value="">All Flags</option>
+                                <option value="watchlist">Watchlist</option>
+                                <option value="high_risk">High Risk</option>
+                                <option value="blocked">Blocked</option>
+                            </select>
+                            <button class="btn btn-ghost btn-sm" onclick="loadAbuseTracking()">
+                                <i class="bi bi-arrow-clockwise"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <table class="data-table">
+                        <thead>
+                            <tr>
+                                <th>Customer</th>
+                                <th>Flag Status</th>
+                                <th>Returns/Month</th>
+                                <th>Defective Claims</th>
+                                <th>Cancellations</th>
+                                <th>Last Updated</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="abuseTrackingTable">
+                            <tr>
+                                <td colspan="7" class="empty-state">Loading...</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Garage Penalties -->
+                <div class="content-card">
+                    <div class="content-header">
+                        <h3 class="content-title"><i class="bi bi-shop" style="color: #8b5cf6;"></i> Garage Penalties
+                        </h3>
+                        <button class="btn btn-ghost btn-sm" onclick="loadGaragePenalties()">
+                            <i class="bi bi-arrow-clockwise"></i> Refresh
+                        </button>
+                    </div>
+                    <p style="color: var(--text-secondary); font-size: 12px; margin-bottom: 15px;">
+                        <i class="bi bi-info-circle"></i> Penalties: 30 QAR (1st), 50 QAR (2nd), 100 QAR (3rd+) per
+                        BRAIN v3.0
+                    </p>
+                    <table class="data-table">
+                        <thead>
+                            <tr>
+                                <th>Garage</th>
+                                <th>Order</th>
+                                <th>Reason</th>
+                                <th>Penalty Amount</th>
+                                <th>Status</th>
+                                <th>Date</th>
+                            </tr>
+                        </thead>
+                        <tbody id="garagePenaltiesTable">
+                            <tr>
+                                <td colspan="6" class="empty-state">
+                                    <i class="bi bi-check-circle" style="font-size: 24px; color: var(--success);"></i>
+                                    <p>No penalties issued</p>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </section>
         </main>
