--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -1254,7 +1254,7 @@
     <script src="js/shared/toast.js"></script>
     <script src="js/shared/modal.js"></script>
     <script src="js/pagination-utils.js"></script>
-    <script src="js/operations-dashboard.js?v=2026.01.27.1"></script>
+    <script src="js/operations-dashboard.js?v=20260128a"></script>
 </body>
 
 </html>
