--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -957,10 +957,11 @@
     <div class="toast-container" id="toastContainer"></div>
 
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
-    <script src="js/shared/utils.js?v=20260126"></script>
-    <script src="js/shared/toast.js?v=20260126"></script>
-    <script src="js/shared/modal.js?v=20260126"></script>
-    <script src="js/support-dashboard.js?v=20260128a"></script>
+    <!-- Scripts with nginx-controlled caching -->
+    <script src="js/shared/utils.js"></script>
+    <script src="js/shared/toast.js"></script>
+    <script src="js/shared/modal.js"></script>
+    <script src="js/support-dashboard.js"></script>
 </body>
 
 </html>
