fix: Override conflicting CSS for login-logo in Support Dashboard

--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -543,27 +543,37 @@
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
         }
 
-        .login-logo {
-            text-align: center;
-            margin-bottom: 30px;
+        /* Login overlay - override external CSS */
+        .login-overlay .login-logo {
+            width: auto !important;
+            height: auto !important;
+            text-align: center !important;
+            margin-bottom: 30px !important;
+            border-radius: 0 !important;
+            box-shadow: none !important;
+            animation: none !important;
+            display: block !important;
         }
 
-        .login-logo img {
+        .login-overlay .login-logo img {
             width: 80px;
             height: 80px;
             border-radius: 20px;
+            margin: 0 auto;
+            display: block;
         }
 
-        .login-logo h1 {
+        .login-overlay .login-logo h1 {
             font-size: 24px;
             font-weight: 800;
             margin: 12px 0 4px;
             color: var(--text-primary);
         }
 
-        .login-logo p {
+        .login-overlay .login-logo p {
             font-size: 13px;
             color: var(--text-muted);
+            margin: 0;
         }
 
         .form-group {
